--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         document.documentElement.classList.add('js');
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -35,6 +36,7 @@
                     <ul class="s-header__menu-links">
                         <li class="current"><a class="smoothscroll" href="#intro">Intro</a></li>
                         <li><a class="smoothscroll" href="#about">About</a></li>
+                        <li><a class="smoothscroll" href="#resume">Resume</a></li>
                         <li><a class="smoothscroll" href="#works">Works</a></li>
                         <li><a class="smoothscroll" href="#footer">Contact</a></li>
                     </ul>     
@@ -91,21 +93,15 @@
                 </a>
             </div> 
         </section> 
-
-         <!-- # about
-        ================================================== -->
         <section id="about" class="s-about target-section">
-
             <div class="row s-about__content">
                 <div class="column xl-12">    
-                    
                     <div class="section-header" data-num="01">
                         <h2 class="text-display-title">About Me.</h2>
-                    </div> <!-- end section-header -->
-
+                    </div>
                     <p class="attention-getter">
-                        Greetings of the day, Myself Mushfiqul Alam ,Currently working as Software Engineer at NexKraft Limited . I have completed my graduation in Computer Science and Engineering 
-                        from East West University in December 2021.During this time I was involved with EWUCOPC and several club activity.I also participated on several NCPC And ICPC preliminary for my University.
+                        Greetings of the day! I am Mushfiqul Alam, currently working as a Software Engineer at NexKraft Limited on a financial project called TIB Finance.
+                        I completed my Bachelor’s degree in Computer Science and Engineering from East West University in December 2021. During my academic journey, I was actively involved with EWUCOPC and participated in various club activities. Additionally, I took part in multiple NCPC and ICPC preliminary contests representing my university.
                     </p>
                     <div class="grid-list-items s-about__blocks">
 
@@ -114,7 +110,6 @@
                             <ul class="s-about__list">
                                 <li>
                                     NexKraft Limited
-                                    <span></span>
                                     <span>Software Engineer</span>
                                 </li>
                                 <li>
@@ -125,36 +120,55 @@
                         </div>  
                         <div class="grid-list-items__item s-about__block">
                             <h4 class="s-about__block-title">Skills</h4>
-
                             <ul class="s-about__list">
                                 <li>
-                                    Product Design
+                                   C, C++, C#, Javascript, Python
                                 </li>
                                 <li>
-                                    UI/UX Design
+                                    .NET Core, .NET MVC
                                 </li>
                                 <li>
-                                    Prototyping
+                                    HTML5/CSS3/BOOTSTRAP
                                 </li>
                                 <li>
-                                    Frontend Development
+                                    MSSQL/SQL
                                 </li>
                                 <li>
-                                    Illustration
+                                    EntityFrameworkCore
                                 </li>
                                 <li>
-                                    Visual Design
+                                    Git,Github
                                 </li>
+                                <li>
+                                   Communication
+                                </li>
+                                <li>
+                                   Problem Solving
+                                </li>
+                                <li>
+                                    Team work
+                                 </li>
                             </ul>
-                        </div> <!--end s-about__block -->
-
-                    </div> <!-- grid-list-items -->
-
-                </div> <!--end column -->
-            </div> <!--end s-about__content -->
-            
-        </section> <!-- end s-about -->   
-
+                        </div> 
+                    </div> 
+                </div> 
+            </div> 
+        </section>   
+        <section id="resume" class="s-about target-section">
+            <div class="row s-about__content">
+                <div class="section-header" data-num="02">
+                    <h2 class="text-display-title">Resume</h2>
+                </div>
+                <div class="column xl-12">
+                    <p>
+                        Aspiring to leverage my expertise as a Software Engineer specializing in the .NET Framework to design and 
+                        develop scalable, high-performance applications. I aim to contribute innovative solutions that drive business 
+                        growth while continuously expanding my technical skills and staying updated with emerging technologies in 
+                        software development.
+                    </p>
+                </div>
+            </div>
+        </section>
         <footer id="footer" style="margin-top: 20px;" class="target-section" style="color: white;">
             <div class="row">
                 <div class="column lg-12">
@@ -192,7 +206,7 @@
                           </div>
                         </div>
                       </div>     
-                </div> <!-- end section-footer__about -->
+                </div> 
 
                 <div class="column xl-6 md-12 s-footer__block s-footer__site-links">
                     <div class="row">
@@ -242,8 +256,8 @@
                 </div>
                 <div class="column xl-6 lg-12">
                     <p class="ss-copyright">
-                        <span>© Copyright Hudson 2023</span> 
-                        <span>Design by <a href="https://styleshout.com/">StyleShout</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></span>
+                        <span>© Copyright Mushfiqul Alam</span> 
+                        <span>Design by <a href="https://www.linkedin.com/in/alammushfiqul/">Mushfiqul Alam</a></span>
                     </p>
                 </div>
             </div>       
