--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
                                    C, C++, C#, Javascript, Python
                                 </li>
                                 <li>
-                                    .NET Core, .NET MVC
+                                    .NET Core, .NET MVC, WEB API
                                 </li>
                                 <li>
-                                    HTML5/CSS3/BOOTSTRAP
+                                    HTML5, CSS3, BOOTSTRAP
                                 </li>
                                 <li>
-                                    MSSQL/SQL
+                                    MSSQL, SQL
                                 </li>
                                 <li>
                                     EntityFrameworkCore
                                 </li>
                                 <li>
-                                    Git,Github
+                                    Git ,Github
                                 </li>
                                 <li>
                                    Communication
@@ -146,7 +146,7 @@
                                    Problem Solving
                                 </li>
                                 <li>
-                                    Team work
+                                   Team work
                                  </li>
                             </ul>
                         </div> 
@@ -167,7 +167,60 @@
                         software development.
                     </p>
                 </div>
+                <div class="resume-item">
+                    <h4 class="text-primary">Mushfiqul Alam</h4>
+                    <p><em>I am seeking to work in a challenging and innovative environment so that I can keep learning new
+                      things and enhance my skills.
+                    </em></p>
+                    <ul>
+                      <li>About 2 year of experience in Microsoft.NET Technology</li>
+                      <li>Capable to develop and manage projects</li>
+                      <li></li>
+
+                    </ul>
+                </div>
+            <div class="col-lg-6">
+              <h3 class="mb-4">Professional Experience</h3>
+              <div class="resume-item pb-0">
+                <h4 class="text-primary">Junior Software Engineer</h4>
+                <h6>March 3, 2022 - Feb 19, 2023</h6>
+                <h4 class="italic">CMED Health Limited,Mohakhali DOHS,Dhaka</h4>
+                <ul class="list-type">
+                  <li>Design and develop software applications using .Net Core, ensuring that they are scalable, maintainable, and meet business requirements</li>
+                  <li>Create and maintain relational databases, and optimize their performance and scalability.</li>
+                  <li>Collaborate with cross-functional teams, including product owners, architects, and QA engineers, to ensure that software projects are delivered on time and to the highest quality standards.</li>
+                  <li>Develop and maintain technical documentation</li>
+                </ul>
             </div>
+            </div>
+                <!-- <h3 class="mb-4">Education</h3>
+              <div class="resume-item">
+                <h4 class="text-primary">Bachelor in Computer Science and Engineering</h4>
+                <h6>2016-2021</h6>
+                <h6 class="italic">East West University,Dhaka,Bangladesh</h6>
+                <ul>
+                  <li>Participated in ACM ICPC Premliminary Contest for 2 Times (2018,2019)</li>
+                  <li>Participated in NCPC</li>
+                </ul>
+              </div>
+              <h3 class="mb-4">Training</h3>
+              <div class="resume-item">
+                <h4 class="text-primary">Full Stack ASP.NET Core</h4>
+                <h6>11th May,2023-Running</h6>
+                <h6 class="italic">A training program under the supervision of Pencilbox Training Institute with the guidance of Shirajul Islam Mamun</h6>
+                <ul>
+                  <li>Basic C# Programming</li>
+                  <li>OOP and OOD with C#</li>
+                  <li>MSSQL Server</li>
+                  <li>PostGres</li>
+                  <li>Basic Programming with ASP.NET Core</li>
+                  <li>Restful API</li>
+                  <li>Angular 12</li>
+                </ul>
+              </div> -->
+            </div>
+            </div>
+            
         </section>
         <footer id="footer" style="margin-top: 20px;" class="target-section" style="color: white;">
             <div class="row">
@@ -232,7 +285,6 @@
                     <a href="https://drive.google.com/drive/folders/17I9TikWmKHpqSOEnd2AnsRMCWoZSUUmd?usp=sharing" class="btn btn--primary btn--large u-fullwidth">Get My CV</a>
                 </div>
             </div>              
-            
             <div class="row s-footer__bottom">
                 <div class="column xl-6 lg-12">
                     <ul class="s-footer__social social-list">
